--- a/quizzApp/src/index.css
+++ b/quizzApp/src/index.css
@@ -6,17 +6,54 @@
 
 /*Uklad całości*/
 
+body {
+  background: linear-gradient(135deg, #F95738, #FFCC70);
+  height: 100vh;
+}
+
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+header {
+  display: flex;
+  margin-top: 14%;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+}
+
+header > h1 {
+  font-size: 60px;
+  font-weight: 700;
+  color: #293264;
+}
+
+header > p {
+  font-size: 32px;
+  color: #293264;
+}
+
+header > button {
+  margin-top: 2em;
+  border-radius: 15px;
+  padding: 1em 3em;
+  background-color: #293264;
+  color: #FFF;
+  border: 1px solid #FFF;
+  font-size: 24px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
 /*Układ pytań*/
 
 .single-question {
   display: flex;
-  margin: 1.2em 5em;
+  margin: 1.5em 5em 0;
+  padding-top: 1em;
   gap: 2em;
   flex-direction: column;
   align-items: center;
@@ -39,8 +76,8 @@ main {
   border: 2px solid #4D5B9E;
   border-radius: 15px;
   padding: .5em 1em;
-  color: #4D5B9E;
-  background-color: #FFF;
+  color: #FFF;
+  background: #2C698D;
   font-size: 14px;
   cursor: pointer;
 }
